[gd_scene load_steps=32 format=3 uid="uid://dqsrstph2hwg3"]

[ext_resource type="Script" path="res://games/type_wizard/type_ninja.gd" id="1_h1ned"]
[ext_resource type="Script" path="res://games/type_wizard/RoomManager.gd" id="2_cjyhs"]
[ext_resource type="Script" path="res://games/type_wizard/DataManager.gd" id="5_h4rqp"]
[ext_resource type="Script" path="res://games/type_wizard/TypingNinja.gd" id="5_snl4t"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="6_ewqwe"]
[ext_resource type="Texture2D" uid="uid://daoaakwpeedy1" path="res://assets/Tiny Dungeon/Tiles/tile_0087.png" id="6_yxgay"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="7_r6cs4"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="8_l83nj"]
[ext_resource type="Script" path="res://games/type_wizard/LevelManager.gd" id="12_3lkcv"]
[ext_resource type="Script" path="res://games/type_wizard/KeyReader.gd" id="12_h25dx"]
[ext_resource type="Theme" uid="uid://dt1lwp3hu1cmq" path="res://games/type_wizard/ui/type_game.tres" id="13_we56g"]
[ext_resource type="Shader" path="res://shaders/blur.gdshader" id="14_tr7pa"]
[ext_resource type="Script" path="res://games/type_wizard/ui/PauseBlur.gd" id="15_lu4wk"]
[ext_resource type="Script" path="res://games/type_wizard/ui/HealthBar.gd" id="16_8wipx"]
[ext_resource type="Script" path="res://combat/Hurtbox.gd" id="16_j5ssk"]
[ext_resource type="Texture2D" uid="uid://bmti1r4wqqqm" path="res://assets/Tiny Dungeon/Tiles/tile_0102.png" id="17_s6g3j"]
[ext_resource type="Script" path="res://games/type_wizard/LevelInfo.gd" id="19_153g6"]
[ext_resource type="Script" path="res://games/type_wizard/ui/Upgrades.gd" id="20_kd5d1"]
[ext_resource type="PackedScene" uid="uid://ccbmop0unfx8t" path="res://games/type_wizard/ui/upgrade_item.tscn" id="21_4m72m"]
[ext_resource type="Script" path="res://games/type_wizard/Map.gd" id="21_d8h5h"]
[ext_resource type="Script" path="res://games/type_wizard/KeyDelegator.gd" id="22_ye7f3"]
[ext_resource type="Script" path="res://games/type_wizard/ui/ItemPickUp.gd" id="23_iqf2q"]
[ext_resource type="PackedScene" uid="uid://cr8ki2xhv8i73" path="res://games/type_wizard/typed/typed_word.tscn" id="24_yrf2s"]
[ext_resource type="Texture2D" uid="uid://ye3ke6pu36qr" path="res://icon.svg" id="25_6rtfb"]
[ext_resource type="PackedScene" uid="uid://41nya1hpni78" path="res://games/type_wizard/type_room.tscn" id="30_cv3xf"]

[sub_resource type="Resource" id="Resource_c7t1a"]
script = ExtResource("8_l83nj")
duration = 1.0
transition = 0
ease = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3nosv"]
size = Vector2(10, 9)

[sub_resource type="CircleShape2D" id="CircleShape2D_gaaer"]
radius = 42.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vo7i8"]
shader = ExtResource("14_tr7pa")
shader_parameter/lod = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ylk8m"]
bg_color = Color(0.163502, 0.163502, 0.163502, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_odckq"]
bg_color = Color(1, 0.8815, 0.21, 1)

[node name="TypeNinja" type="Node2D" node_paths=PackedStringArray("ninja")]
script = ExtResource("1_h1ned")
ninja = NodePath("Root/Ninja")

[node name="RoomManager" type="Node" parent="."]
script = ExtResource("2_cjyhs")

[node name="KeyReader" type="Node" parent="."]
script = ExtResource("12_h25dx")

[node name="DataManager" type="Node" parent="."]
script = ExtResource("5_h4rqp")

[node name="TypeRoom" parent="." node_paths=PackedStringArray("player") instance=ExtResource("30_cv3xf")]
player = NodePath("../Root/Ninja")

[node name="Root" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Camera2D" type="Camera2D" parent="Root"]

[node name="PhantomCameraHost" type="Node" parent="Root/Camera2D"]
script = ExtResource("6_ewqwe")

[node name="PhantomCamera2D" type="Node2D" parent="Root"]
script = ExtResource("7_r6cs4")
tween_resource = SubResource("Resource_c7t1a")

[node name="Ninja" type="CharacterBody2D" parent="Root" groups=["TypingNinja"]]
script = ExtResource("5_snl4t")

[node name="InvincibleTimer" type="Timer" parent="Root/Ninja"]
one_shot = true

[node name="TypeTimer" type="Timer" parent="Root/Ninja"]
one_shot = true

[node name="Player" type="Sprite2D" parent="Root/Ninja"]
texture = ExtResource("6_yxgay")
offset = Vector2(0, -5)

[node name="LevelManager" type="Node" parent="Root/Ninja"]
script = ExtResource("12_3lkcv")

[node name="Hurtbox" type="Area2D" parent="Root/Ninja"]
position = Vector2(0, -3)
collision_layer = 8
collision_mask = 0
script = ExtResource("16_j5ssk")
max_health = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Root/Ninja/Hurtbox"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_3nosv")
debug_color = Color(0.985284, 0.11917, 1.92523e-07, 0.42)

[node name="PushBack" type="Area2D" parent="Root/Ninja"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Root/Ninja/PushBack"]
shape = SubResource("CircleShape2D_gaaer")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("13_we56g")

[node name="PauseBlur" type="ColorRect" parent="CanvasLayer/UI"]
visible = false
material = SubResource("ShaderMaterial_vo7i8")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
script = ExtResource("15_lu4wk")

[node name="GameUI" type="Control" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Map" type="Control" parent="CanvasLayer/UI/GameUI" node_paths=PackedStringArray("room_manager")]
anchors_preset = 0
script = ExtResource("21_d8h5h")
room_manager = NodePath("../../../../RoomManager")

[node name="Health" type="MarginContainer" parent="CanvasLayer/UI/GameUI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -10.0
offset_bottom = 10.0
grow_horizontal = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI/GameUI/Health" node_paths=PackedStringArray("hurtbox")]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 0
script = ExtResource("16_8wipx")
icon = ExtResource("17_s6g3j")
hurtbox = NodePath("../../../../../Root/Ninja/Hurtbox")

[node name="Counter" type="MarginContainer" parent="CanvasLayer/UI/GameUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -58.0
offset_right = 58.0
offset_bottom = 18.0
grow_horizontal = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI/GameUI/Counter" node_paths=PackedStringArray("level", "level_label", "exp_bar")]
layout_mode = 2
script = ExtResource("19_153g6")
level = NodePath("../../../../../Root/Ninja/LevelManager")
level_label = NodePath("Label")
exp_bar = NodePath("ProgressBar")

[node name="Label" type="Label" parent="CanvasLayer/UI/GameUI/Counter/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "1"

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/UI/GameUI/Counter/HBoxContainer"]
modulate = Color(1, 1, 1, 0.666667)
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_ylk8m")
theme_override_styles/fill = SubResource("StyleBoxFlat_odckq")
value = 27.61
show_percentage = false

[node name="Upgrades" type="MarginContainer" parent="CanvasLayer/UI" node_paths=PackedStringArray("container", "pause", "key_reader")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("20_kd5d1")
container = NodePath("HBoxContainer")
upgrade_scene = ExtResource("21_4m72m")
pause = NodePath("../PauseBlur")
key_reader = NodePath("KeyReader")

[node name="KeyDelegator" type="Node" parent="CanvasLayer/UI/Upgrades"]
script = ExtResource("22_ye7f3")

[node name="KeyReader" type="Node" parent="CanvasLayer/UI/Upgrades"]
script = ExtResource("12_h25dx")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI/Upgrades"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ItemPickUp" type="CenterContainer" parent="CanvasLayer/UI" node_paths=PackedStringArray("title_lbl", "icon", "desc_lbl", "name_lbl", "pause", "key_reader")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("23_iqf2q")
title_lbl = NodePath("PanelContainer/MarginContainer/VBoxContainer/Title")
icon = NodePath("PanelContainer/MarginContainer/VBoxContainer/Icon")
desc_lbl = NodePath("PanelContainer/MarginContainer/VBoxContainer/Desc")
name_lbl = NodePath("PanelContainer/MarginContainer/VBoxContainer/Name")
pause = NodePath("../PauseBlur")
key_reader = NodePath("KeyReader")

[node name="KeyReader" type="Node" parent="CanvasLayer/UI/ItemPickUp"]
script = ExtResource("12_h25dx")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/UI/ItemPickUp"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UI/ItemPickUp/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI/ItemPickUp/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" parent="CanvasLayer/UI/ItemPickUp/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("24_yrf2s")]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="CanvasLayer/UI/ItemPickUp/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
texture = ExtResource("25_6rtfb")
expand_mode = 2
stretch_mode = 5

[node name="Name" type="Label" parent="CanvasLayer/UI/ItemPickUp/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "__SPELL__"
horizontal_alignment = 1

[node name="Desc" type="Label" parent="CanvasLayer/UI/ItemPickUp/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "__DESC__"
horizontal_alignment = 1
autowrap_mode = 3
